* Much more intelligent parsing
    *  Annotations and highlights of syntax errors
    *  Annotations and highlights of warnings created by JRuby parser
* Auto-complete of brackets, parens, and single/double quotes
* Task tag recognition
    * Ability to set multiple tags
    * Ability to set low, normal or high priorities for tags
    * Early versions from Head (no official releases) would install a TODO marker that
      would not be removed. This bug was fixed, but if you've got "stuck Tasks" that 
      don't match actual task tags in your source file, there are two ways to remove them.
      1) open the file in the text editor (right-click on the file in Resource Navigator, and 
      select Open With - Text Editor).  You can then right click on the task tag in the left margin
      and select Remove Task
      2) If this doesn't work, you need to basically delete the file, and create a new one in its place.
* Added shortcuts for inspection during debug session:
    * Extension to the editor's pop-up menu
    * Preference page
* Added RI view
* Fixed bug in Debugger which crashed Eclipse (no more handles)
* Fixed bug [1078036]: Cursor moves to document start when formatting whole document (i.e. there is no selection)
* Fixed bug [1090687]: Uncomment broken
* Fixed bug [1079795]: Warning in variable view
* Saving an editor in debug session triggers code reload of ruby interpreter
* Tab jumps to correct position
* Fixed bug [1098315]: Incorrect formatting if semicolon are used directly attached to keywords, i.e. no separating spaces
* Test::Unit tests can be launched in debug mode
* Syntax highlighting (and customization) of regular expressions and commands
* Committed patch by Khaled Agrama so Eclipse 3.1 would recognize .rb files with Ruby Editor
* Committed patch for bug 959808. Singleton methods are now recognized correctly in the outlinew view
* Create commands for launch short cuts so keys could be bound to them.  Configured default key bindings.