@@ -41,7 +41,7 @@ UncommentAction.label=&Uncomment@Ctrl+\\
 CommentAction.label=&Comment@Ctrl+/
 ToggleCommentAction.label=&Toggle Comment@Ctrl+Shift+C
 
-category.source.name=Source
+category.source.name=Ruby Source
 category.source.description= Ruby Source Actions
 
 ActionDefinition.format.name= Ruby Format
