@@ -35,3 +35,5 @@ Changes since Release of 0.5.0
 * Committed patch by Khaled Agrama so Eclipse 3.1 would recognize .rb files with Ruby Editor
 * Committed patch for bug 959808. Singleton methods are now recognized correctly in the outlinew view
 * Create commands for launch short cuts so keys could be bound to them.  Configured default key bindings.
+* Changed default key bindings for Comment, Uncomment and ToggleComment to be consistent with JDT.  Changed the keybinding
+  category to "Ruby Source" so it doesn't clash with JDT.
